@@ -1,19 +1,22 @@
+#!/usr/bin/dh-exec
+
 usr/lib/postgresql/*/bin/initdb
+usr/lib/postgresql/*/bin/oid2name
+usr/lib/postgresql/*/bin/pg_archivecleanup
+usr/lib/postgresql/*/bin/pgbench
 usr/lib/postgresql/*/bin/pg_controldata
 usr/lib/postgresql/*/bin/pg_ctl
 usr/lib/postgresql/*/bin/pg_resetxlog
 usr/lib/postgresql/*/bin/pg_rewind
+usr/lib/postgresql/*/bin/pg_standby
+usr/lib/postgresql/*/bin/pg_test_fsync
+usr/lib/postgresql/*/bin/pg_test_timing
 usr/lib/postgresql/*/bin/pg_upgrade
 usr/lib/postgresql/*/bin/pg_xlogdump
 usr/lib/postgresql/*/bin/postgres
 usr/lib/postgresql/*/bin/postmaster
-usr/lib/postgresql/*/lib/*_and_*.so
-usr/lib/postgresql/*/lib/euc2004_sjis2004.so
-usr/lib/postgresql/*/lib/libpqwalreceiver.so
-usr/lib/postgresql/*/lib/pgoutput.so
-usr/lib/postgresql/*/lib/plpgsql.so
-usr/lib/postgresql/*/lib/dict_snowball.so
-usr/lib/postgresql/*/lib/tsearch2.so
+usr/lib/postgresql/*/bin/vacuumlo
+usr/lib/postgresql/*/lib/*.so
 usr/share/locale/*/LC_MESSAGES/initdb-*.mo
 usr/share/locale/*/LC_MESSAGES/pg_controldata-*.mo
 usr/share/locale/*/LC_MESSAGES/pg_ctl-*.mo
@@ -22,16 +25,24 @@ usr/share/locale/*/LC_MESSAGES/pg_rewind-*.mo
 usr/share/locale/*/LC_MESSAGES/postgres-*.mo
 usr/share/locale/*/LC_MESSAGES/plpgsql-*.mo
 usr/share/locale/*/*/plpython-*.mo
-usr/share/postgresql/*/extension/plpgsql*
+[linux-any] usr/share/postgresql/*/contrib/sepgsql.sql
+usr/share/postgresql/*/extension/*
 usr/share/postgresql/*/man/man1/initdb.1*
+usr/share/postgresql/*/man/man1/oid2name.1*
+usr/share/postgresql/*/man/man1/pg_archivecleanup.1*
+usr/share/postgresql/*/man/man1/pgbench.1*
 usr/share/postgresql/*/man/man1/pg_controldata.1*
 usr/share/postgresql/*/man/man1/pg_ctl.1*
 usr/share/postgresql/*/man/man1/pg_resetxlog.1*
 usr/share/postgresql/*/man/man1/pg_rewind.1*
+usr/share/postgresql/*/man/man1/pg_standby.1*
+usr/share/postgresql/*/man/man1/pg_test_fsync.1*
+usr/share/postgresql/*/man/man1/pg_test_timing.1*
 usr/share/postgresql/*/man/man1/pg_upgrade.1*
 usr/share/postgresql/*/man/man1/pg_xlogdump.1*
 usr/share/postgresql/*/man/man1/postgres.1*
 usr/share/postgresql/*/man/man1/postmaster.1*
+usr/share/postgresql/*/man/man1/vacuumlo.1*
 usr/share/postgresql/*/timezonesets/*
 usr/share/postgresql/*/tsearch_data
 usr/share/postgresql/*/*.sql
