@@ -1,66 +1,0 @@
-#!/usr/bin/dh-exec
-
-usr/share/postgresql/*/extension/*
-usr/lib/postgresql/*/lib/auth_delay.so
-usr/lib/postgresql/*/bin/pg_archivecleanup
-usr/lib/postgresql/*/bin/oid2name
-usr/lib/postgresql/*/bin/pgbench
-usr/lib/postgresql/*/bin/vacuumlo
-usr/lib/postgresql/*/bin/pg_standby
-usr/lib/postgresql/*/bin/pg_test_fsync
-usr/lib/postgresql/*/bin/pg_test_timing
-usr/lib/postgresql/*/lib/_int.so
-usr/lib/postgresql/*/lib/autoinc.so
-usr/lib/postgresql/*/lib/bloom.so
-usr/lib/postgresql/*/lib/btree_gist.so
-usr/lib/postgresql/*/lib/chkpass.so
-usr/lib/postgresql/*/lib/cube.so
-usr/lib/postgresql/*/lib/dblink.so
-usr/lib/postgresql/*/lib/earthdistance.so
-usr/lib/postgresql/*/lib/file_fdw.so
-usr/lib/postgresql/*/lib/fuzzystrmatch.so
-usr/lib/postgresql/*/lib/insert_username.so
-usr/lib/postgresql/*/lib/lo.so
-usr/lib/postgresql/*/lib/ltree.so
-usr/lib/postgresql/*/lib/moddatetime.so
-usr/lib/postgresql/*/lib/pageinspect.so
-usr/lib/postgresql/*/lib/passwordcheck.so
-usr/lib/postgresql/*/lib/pg_trgm.so
-usr/lib/postgresql/*/lib/pgcrypto.so
-#usr/lib/postgresql/*/lib/pg_audit.so
-usr/lib/postgresql/*/lib/pg_prewarm.so
-usr/lib/postgresql/*/lib/pgstattuple.so
-usr/lib/postgresql/*/lib/refint.so
-usr/lib/postgresql/*/lib/seg.so
-[linux-any] usr/lib/postgresql/*/lib/sepgsql.so
-usr/lib/postgresql/*/lib/tablefunc.so
-usr/lib/postgresql/*/lib/tcn.so
-usr/lib/postgresql/*/lib/test_decoding.so
-usr/lib/postgresql/*/lib/timetravel.so
-usr/lib/postgresql/*/lib/pgxml.so
-usr/lib/postgresql/*/lib/pg_buffercache.so
-usr/lib/postgresql/*/lib/adminpack.so
-usr/lib/postgresql/*/lib/sslinfo.so
-usr/lib/postgresql/*/lib/isn.so
-usr/lib/postgresql/*/lib/hstore.so
-usr/lib/postgresql/*/lib/pgrowlocks.so
-usr/lib/postgresql/*/lib/pg_freespacemap.so
-usr/lib/postgresql/*/lib/uuid-ossp.so
-usr/lib/postgresql/*/lib/dict_int.so
-usr/lib/postgresql/*/lib/dict_xsyn.so
-usr/lib/postgresql/*/lib/auto_explain.so
-usr/lib/postgresql/*/lib/pg_stat_statements.so
-usr/lib/postgresql/*/lib/citext.so
-usr/lib/postgresql/*/lib/btree_gin.so
-usr/lib/postgresql/*/lib/unaccent.so
-usr/lib/postgresql/*/lib/postgres_fdw.so
-usr/lib/postgresql/*/lib/tsm_system_*.so
-usr/lib/postgresql/*/lib/pg_visibility.so
-[linux-any] usr/share/postgresql/*/contrib/sepgsql.sql
-usr/share/postgresql/*/man/man1/oid2name.1*
-usr/share/postgresql/*/man/man1/pg_test_fsync.1*
-usr/share/postgresql/*/man/man1/pg_archivecleanup.1*
-usr/share/postgresql/*/man/man1/pg_test_timing.1*
-usr/share/postgresql/*/man/man1/pg_standby.1*
-usr/share/postgresql/*/man/man1/pgbench.1*
-usr/share/postgresql/*/man/man1/vacuumlo.1*
