@@ -1,13 +1,0 @@
-#!/bin/sh
-
-set -e
-
-VERSION=${DPKG_MAINTSCRIPT_PACKAGE##*-}
-
-. /usr/share/postgresql-common/maintscripts-functions
-
-if [ "$1" = configure ]; then
-    configure_contrib_version $VERSION "$2"
-fi
-
-#DEBHELPER#
