@@ -1,12 +1,0 @@
-#!/bin/sh
-
-set -e
-
-VERSION=${DPKG_MAINTSCRIPT_PACKAGE##*-}
-
-#DEBHELPER#
-
-if [ "$1" = remove ]; then
-    . /usr/share/postgresql-common/maintscripts-functions
-    remove_contrib_version $VERSION
-fi
